--- a/task-1.html
+++ b/task-1.html
@@ -11,8 +11,8 @@
     <p><a href="./index.html">Go back</a></p>
 
     <ul id="categories">
-      <li class="item">
-        <h2>Animals</h2>
+      <li class="item-task1">
+        <h2 class="title">Animals</h2>
 
         <ul>
           <li>Cat</li>
@@ -21,8 +21,8 @@
           <li>Parrot</li>
         </ul>
       </li>
-      <li class="item">
-        <h2>Products</h2>
+      <li class="item-task1">
+        <h2 class="title">Products</h2>
 
         <ul>
           <li>Bread</li>
@@ -30,8 +30,8 @@
           <li>Cheese</li>
         </ul>
       </li>
-      <li class="item">
-        <h2>Technologies</h2>
+      <li class="item-task1">
+        <h2 class="title">Technologies</h2>
 
         <ul>
           <li>HTML</li>
